# evm-cfg

./: Cargo.toml  README.md  cfg.dot  cfg_april_no_symbolic.dot  cfg_basic_connections.dot  cfg_fun_reversing_challenge.dot  cfg_weth.dot
examples/: april.evm  basic.sol  cfg.dot  cfg_april_symbolic.dot  cfg_basic.dot  cfg_loop.dot  cfg_weth.dot  curta12.evm  fun_reversing_challenge.evm  test.dot  weth9.evm
src/: lib.rs  main.rs
src/cfg_gen/: cfg_graph.rs  dasm.rs  mod.rs  stack_solve.rs
